--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.13",
+    "@tinacms/cli": "^1.5.45",
+    "@types/node": "^20.12.8",
     "astro": "^4.7.1",
     "daisyui": "^4.10.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "tinacms": "^1.6.3"
   }
 }
